# web-manager

./: .gitignore  Makefile.am  README  TODO  configure.ac  web-manager.control  web-manager.control.in
data/: Makefile.am
data/init.d/: web-manager
data/web/: index.html  main.js  tabs-accordion.css  tabs.css
src/: Makefile.am  main.vala  rest_api.vala
