AC_INIT(web-manager, 0.1, http://www.shr-project.org/)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.ac)
AC_ISC_POSIX

AM_INIT_AUTOMAKE(1.6 dist-bzip2)
AM_CONFIG_HEADER(config.h)

AM_PROG_VALAC([0.7.0])
AM_SILENT_RULES
AM_MAINTAINER_MODE([enable])
AC_PROG_CC
AC_HEADER_STDC

#AC_PATH_PROG(DBUSBINDINGTOOL, vala-dbus-binding-tool)
#AC_SUBST(DBUSBINDINGTOOL)

PKG_CHECK_MODULES(DBUS, dbus-glib-1 >= 0.70 dbus-1 >= 0.70 gthread-2.0)
AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LIBS)

PKG_CHECK_MODULES(GEE, gee-1.0)
AC_SUBST(GEE_CFLAGS)
AC_SUBST(GEE_LIBS)

PKG_CHECK_MODULES(GIO, gio-2.0)
AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)

#PKG_CHECK_MODULES(FSO_GLIB, fso-glib-1.0)
#AC_SUBST(FSO_GLIB_CFLAGS)
#AC_SUBST(FSO_GLIB_LIBS)

#GLIB_GENMARSHAL=`$PKG_CONFIG glib-2.0 --variable=glib_genmarshal`
#AC_SUBST(GLIB_GENMARSHAL)

AC_OUTPUT([
Makefile
src/Makefile
data/Makefile
])
